main.tf

resource "aws_s3_bucket" "backend_bucket" {
  bucket = "tf-backend-bucket-xyner"

}


resource "aws_vpc" "ecomref_vpc" {

}
